--- a/example.config.json
+++ b/example.config.json
@@ -4,12 +4,13 @@
         "cookie": { "domain": "local.net" }
     },
     "certificate": {
-        "key": "certificates/jsreport.net.key",    
+        "key": "certificates/jsreport.net.key",
         "cert": "certificates/jsreport.net.cert"
-    },    
+    },
     "connectionString": { "name": "neDB" },
     "httpPort": 3000,
     "httpsPort": 4000,
 	"blobStorage": "fileSystem",
-	"useCluster": false
+	"useCluster": false,
+  "allowedModules": ["handlebars", "request-json", "feedparser", "request", "underscore"]
 }
